# substrait-postgres

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  pg_substrait.control  test_simple.json
.cargo/: config.toml
.github/workflows/: ci.yml
scripts/: setup-tpch.sh
src/: executor.rs  lib.rs  parse_hooks.rs  plan_translator.rs
testdata/: README.md
testdata/tpch/: tpch-plan01.json  tpch-plan02.json  tpch-plan03.json  tpch-plan04.json  tpch-plan05.json  tpch-plan06.json  tpch-plan07.json  tpch-plan09.json  tpch-plan10.json  tpch-plan11.json  tpch-plan12.json  tpch-plan13.json  tpch-plan14.json  tpch-plan16.json  tpch-plan17.json  tpch-plan18.json  tpch-plan19.json  tpch-plan20.json  tpch-plan21.json  tpch-plan22.json
