[package]
name = "pg_substrait"
version = "0.1.0"
edition = "2021"
license = "PostgreSQL"
description = "PostgreSQL extension for executing Substrait query plans"
repository = "https://github.com/PrimeDataConversion/substrait-postgres"
homepage = "https://github.com/PrimeDataConversion/substrait-postgres"
documentation = "https://github.com/PrimeDataConversion/substrait-postgres"
readme = "README.md"
keywords = ["postgresql", "substrait", "sql", "query", "database"]
categories = ["database"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_substrait"
path = "./src/bin/pgrx_embed.rs"

[dependencies]
pgrx = "=0.14.3"
substrait = { version = "0.57.0", features = ["serde"] }
prost = "0.13"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"

[dev-dependencies]
pgrx-tests = "=0.14.3"

[features]
default = ["pg16"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[package.metadata.pgrx]
comment = "Substrait integration for PostgreSQL"
relocatable = false
superuser = false
